# tufte

./: README.md  pyproject.toml  requirements.txt
tufte/: __init__.py
tufte/components/: __init__.py  code_executor.py  data_model.py  goalExplorer.py  goal_explorer.py  mySummarizer.py  mysummarizer2.py  orchestrator.py  scaffold.py  summarizer.py  utils.py  viz_generator.py
